firewall.tf
resource "aws_networkfirewall_firewall_policy" "anfw_policy" {
  name = "firewall-policy"
  firewall_policy {
    stateless_default_actions          = ["aws:drop"]
    stateless_fragment_default_actions = ["aws:drop"]
    stateless_rule_group_reference {
      priority     = 1
      resource_arn = aws_networkfirewall_rule_group.stateless.id
    }
    stateful_rule_group_reference {
      resource_arn = aws_networkfirewall_rule_group.allow_domains.arn
    }
  }

  tags = merge(
    var.additional_tags,
    {
      Name = "anfw-policy-${var.test_case}"
    },
  )
}

resource "aws_networkfirewall_rule_group" "stateless" {
  description = "Allows NTP and database access and forwards HTTPS"
  capacity    = 100
  name        = "MainStateless"
  type        = "STATELESS"
  rule_group {
    rules_source {
      stateless_rules_and_custom_actions {
        stateless_rule {
          priority = 10
          rule_definition {
            actions = ["aws:pass"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              source_port {
                from_port = 0
                to_port   = 65535
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
              destination_port {
                from_port = 123
                to_port   = 123
              }
              protocols = [17]
            }
          }
        }
        stateless_rule {
          priority = 11
          rule_definition {
            actions = ["aws:pass"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              source_port {
                from_port = 123
                to_port   = 123
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
              destination_port {
                from_port = 0
                to_port   = 65535
              }
              protocols = [17]
            }
          }
        }
        stateless_rule {
          priority = 20
          rule_definition {
            actions = ["aws:pass"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              source_port {
                from_port = 0
                to_port   = 65535
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
              destination_port {
                from_port = 5432
                to_port   = 5432
              }
              protocols = [6]
            }
          }
        }
        stateless_rule {
          priority = 21
          rule_definition {
            actions = ["aws:pass"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              source_port {
                from_port = 5432
                to_port   = 5432
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
              destination_port {
                from_port = 0
                to_port   = 65535
              }
              protocols = [6]
            }
          }
        }
        stateless_rule {
          priority = 30
          rule_definition {
            actions = ["aws:forward_to_sfe"]
            match_attributes {
              source {
                address_definition = aws_vpc.main.cidr_block
              }
              source_port {
                from_port = 0
                to_port   = 65535
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
              destination_port {
                from_port = 443
                to_port   = 443
              }
              protocols = [6, 17]
            }
          }
        }
        stateless_rule {
          priority = 31
          rule_definition {
            actions = ["aws:forward_to_sfe"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              source_port {
                from_port = 443
                to_port   = 443
              }
              destination {
                address_definition = aws_vpc.main.cidr_block
              }
              destination_port {
                from_port = 0
                to_port   = 65535
              }
              protocols = [6, 17]
            }
          }
        }
        stateless_rule {
          priority = 32
          rule_definition {
            actions = ["aws:forward_to_sfe"]
            match_attributes {
              source {
                address_definition = aws_vpc.main.cidr_block
              }
              source_port {
                from_port = 0
                to_port   = 65535
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
              destination_port {
                from_port = 80
                to_port   = 80
              }
              protocols = [6, 17]
            }
          }
        }
        stateless_rule {
          priority = 33
          rule_definition {
            actions = ["aws:forward_to_sfe"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              source_port {
                from_port = 80
                to_port   = 80
              }
              destination {
                address_definition = aws_vpc.main.cidr_block
              }
              destination_port {
                from_port = 0
                to_port   = 65535
              }
              protocols = [6, 17]
            }
          }
        }
        stateless_rule {
          priority = 99
          rule_definition {
            actions = ["aws:drop"]
            match_attributes {
              source {
                address_definition = "0.0.0.0/0"
              }
              destination {
                address_definition = "0.0.0.0/0"
              }
            }
          }
        }
      }
    }
  }
}

resource "aws_networkfirewall_rule_group" "allow_domains" {
  capacity = 100
  name     = "allow-domains"
  type     = "STATEFUL"
  rule_group {
    rules_source {
      rules_source_list {
        generated_rules_type = "ALLOWLIST"
        target_types         = ["HTTP_HOST", "TLS_SNI"]
        targets              = concat(
          var.allowed_https_domains,
          [
            "amazonlinux-2-repos-${var.region}.s3.${var.region}.amazonaws.com",
            "amazonlinux.${var.region}.amazonaws.com"
          ]
        )
      }
    }
  }

  tags = merge(
    var.additional_tags,
    {
      Name = "anfw-rule-domains-${var.test_case}"
    },
  )
}

resource "aws_networkfirewall_firewall" "anfw" {
  name                = "NetworkFirewall"
  firewall_policy_arn = aws_networkfirewall_firewall_policy.anfw_policy.arn
  vpc_id              = aws_vpc.main.id

  subnet_mapping {
    subnet_id = aws_subnet.fw-a.id
  }

  tags = merge(
    var.additional_tags,
    {
      Name = "anfw-${var.test_case}"
    },
  )
}

resource "aws_cloudwatch_log_group" "anfw_alert_log_group" {
  name = "/aws/network-firewall/alert"
}

resource "aws_networkfirewall_logging_configuration" "anfw_alert_logging_configuration" {
  firewall_arn = aws_networkfirewall_firewall.anfw.arn
  logging_configuration {
    log_destination_config {
      log_destination = {
        logGroup = aws_cloudwatch_log_group.anfw_alert_log_group.name
      }
      log_destination_type = "CloudWatchLogs"
      log_type             = "ALERT"
    }
  }
}
